--- a/02-experimental-design.html
+++ b/02-experimental-design.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Scientific inquiry</title>
+<title>Experimental design</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,74 +429,74 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Scientific inquiry</h1>
+<h1 class="title toc-ignore">Experimental design</h1>
 
 </div>
 
 
+<div id="housekeeping" class="section level2">
+<h2>Housekeeping</h2>
+<p><strong>Lab today</strong></p>
+<ul>
+<li>Lab meets in SH 112 today, then we’ll walk over to Kent, then over
+to the marsh near Wherritt’s Pond</li>
+<li>Wear long pants for the marsh (to protect from scratchy grass, bugs,
+mud)</li>
+<li>Bring your boots (don’t forget socks!)</li>
+<li>We have lots of extra boots</li>
+<li>Bring a pencil and notebook (only <strong>pencil</strong> works on
+the waterproof paper we use in the field; I have some extras)</li>
+</ul>
+<p><strong>Quiz on Tuesday</strong></p>
+<p>Will cover the learning objectives listed for today and Tuesday’s
+class. Most of the content comes from the Milroy textbook (Ch 1 and 3).
+Some of it also comes from the Sagarin &amp; Pauchard 2010 paper linked
+in Tuesday’s notes. Remember to bring hand-written notes to use on the
+collaborative portion of the quiz!</p>
+<p><strong>Species ID quiz on Thursday</strong></p>
+<p>You absolutely need to be able identify the marsh plant species we’ll
+be working with in order to record accurate observations. You can bring
+your own plant ID guide with you to lab next week (paper or digital, but
+digital might be hard to see in the sun, it might rain, etc.). You’ll
+have the opportunity to take photos, make drawings, and take notes about
+the species in lab today. The species you’ll need to be able to identify
+at Point Lookout are listed <a href="https://mrne392.github.io/assessment/marsh-species.html">here</a>.</p>
+</div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning objectives</h2>
 <p>Students should be able to:</p>
 <ul>
-<li>list the requirements of a well-crafted hypothesis</li>
-<li>formulate a well-crafted research question and hypothesis based on
-an observation</li>
-<li>describe the differences between a manipulative experiment and an
-observational study</li>
-<li>identify independent and dependent variables in an experimental or
-observational study</li>
-<li>identify experimental and control treatments in an experimental
-study</li>
-<li>identify natural “experimental” and “control” treatments in an
-observational study</li>
+<li>Define the terms, research <em>goals</em> and
+<em>objectives</em></li>
+<li>Explain the goals and objectives of our marsh field project</li>
+<li>Recognize whether a study is a method comparison, single-element
+assessment, multi-element correlation, or synthetic analysis</li>
+<li>Discuss the benefits and drawbacks of plot-based and plotless
+sampling methods</li>
+<li>Define simple random sampling and stratified random sampling</li>
+<li>Explain when stratified random sampling is preferred over simple
+random sampling</li>
 </ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="https://docs.google.com/presentation/d/1J_MQHerLhh3m3X6Nt_omx3b_K_YBR9RpqcHNmxg37pA/edit?usp=sharing">Slides
-01. Scientific inquiry</a></li>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch1.pdf">Milroy
-Ch 1 p 3-16</a>: The foundations of scientific inquiry (slides and
-learning objectives are largely based on this chapter)</li>
-<li>Papers that go into greater depth on observational vs. experimental
-ecology (optional)
-<ul>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Sagarin_Pauchard_2010.pdf">Sagarin
-&amp; Pauchard 2010: Observational approaches in ecology open new ground
-in a changing world</a></li>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Wootton_Pfister_1998.pdf">Wootton
-&amp; Pfister 1998: The motivation for and context of experiments in
-ecology</a></li>
-</ul></li>
+<li><a href="https://docs.google.com/presentation/d/1bZHVFvr005bMlQouhQhJPoQjVvFQeEzJovNruV90i1c/edit#slide=id.g2f6b502116f_0_66">Slides</a></li>
+<li><a href>Milroy Ch 3: Experimental design</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
-<div id="introductions" class="section level3">
-<h3>1. Introductions</h3>
-<ul>
-<li>Share name &amp; preferred pronouns, major(s)/minor(s), something
-fun or interesting you did this summer.</li>
-<li>In groups: What is field research? Why do we do it? What are your
-research interests and why?</li>
-</ul>
+<div id="lecture" class="section level3">
+<h3>Lecture</h3>
+<iframe src="https://docs.google.com/presentation/d/1bZHVFvr005bMlQouhQhJPoQjVvFQeEzJovNruV90i1c/embed?start=false&amp;loop=false&amp;delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
+</iframe>
 </div>
-<div id="course-logistics" class="section level3">
-<h3>2. Course logistics</h3>
-<ul>
-<li>Course website url:<a href="https://mrne392.github.io/website/">https://mrne392.github.io/website/</a>.
-Bookmark this link - it has everything you need for the class.</li>
-<li>The <a href="https://mrne392.github.io/website/syllabus.html">syllabus</a>
-contains information on assessment and class policies.</li>
-<li>The <a href="https://mrne392.github.io/website/schedule.html">schedule</a> is
-our master organizer. All assignments, slides, lab exercises, etc. are
-linked here by date.</li>
-</ul>
-</div>
-<div id="intro-to-field-research-and-scientific-inquiry" class="section level3">
-<h3>3. Intro to field research and scientific inquiry</h3>
-<iframe src="https://docs.google.com/presentation/d/1J_MQHerLhh3m3X6Nt_omx3b_K_YBR9RpqcHNmxg37pA/embed?start=false&amp;loop=false&amp;delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
+<div id="lab" class="section level3">
+<h3>Lab</h3>
+<p><a href="https://docs.google.com/document/d/1OA3DDQyh7cCk3lXg7iMWgie_O-QdNZEd0XM8uscr9qA/edit#heading=h.vlcnbn6jrdz0">Lab
+activities</a></p>
+<iframe src="https://docs.google.com/presentation/d/14PJIsHgIUrb91Qb_lKDQaTfdsYk7a6eWq0u9knjB5aY/embed?start=false&amp;loop=false&amp;delayms=5000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
 </iframe>
 </div>
 </div>
