add lesson plan

--- a/02-experimental-design.html
+++ b/02-experimental-design.html
@@ -482,7 +482,8 @@ random sampling</li>
 <h2>Resources</h2>
 <ul>
 <li><a href="https://docs.google.com/presentation/d/1bZHVFvr005bMlQouhQhJPoQjVvFQeEzJovNruV90i1c/edit#slide=id.g2f6b502116f_0_66">Slides</a></li>
-<li><a href>Milroy Ch 3: Experimental design</a></li>
+<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch3.pdf">Milroy
+Ch 3: Experimental design</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
