--- a/04-marsh-field-methods.html
+++ b/04-marsh-field-methods.html
@@ -437,12 +437,12 @@ display: none;
 <div id="housekeeping" class="section level2">
 <h2>Housekeeping</h2>
 <ul>
-<li>Lab this week is at Point Lookout. The marsh there is much bigger
-than the one we were in last week, and we might have to walk through
-some tall grass to get to the marsh. Wear long pants (light,
-loose-fitting synthetic material is best; avoid jeans and tights). The
-grass will tear up your legs and the ranger said chiggers are out there
-too. There’s also a small amount of poison ivy.</li>
+<li>We will meet for lab at the vans next to Physical Plant (by the
+ARC)</li>
+<li>Wear long pants (light, loose-fitting synthetic material is best;
+avoid jeans and tights). The grass will tear up your legs and the ranger
+said chiggers are out there too. There’s also a small amount of poison
+ivy.</li>
 <li>Bring waterproof boots (we have extra boots in limited sizes - if
 you own a pair please bring them).</li>
 <li>Be prepared to spend most of the afternoon outside.</li>
@@ -469,12 +469,34 @@ Ch 3: Experimental design</a></li>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
-<p>Go over the details of our marsh sampling methods, as outlined in the
-slides, so that you’re ready to make the measurements in the field
-today. Make sure to take good notes here because you will have to
-clearly articulate our research in your marsh lab report.</p>
+<ol style="list-style-type: decimal">
+<li>We’ll first go over the details of our marsh sampling methods, as
+outlined in the slides, so that you’re ready to make the measurements in
+the field today. Pay close attention because Kylie and I won’t be able
+to help everyone at the same time.</li>
+</ol>
 <iframe src="https://docs.google.com/presentation/d/1V8VrXDSoeyJIivLSKPxECJzmMrDmmyq-bhgUY9I1600/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
 </iframe>
+<ol start="2" style="list-style-type: decimal">
+<li>Pre-lab prep:</li>
+</ol>
+<p><strong>Enter quadrat coordinates into GPS unit</strong></p>
+<ul>
+<li>Put a piece of labeling tape on your group’s GPS unit and label it
+with your group letter.<br />
+</li>
+<li>Enter your group’s GPS coordinates into your GPS unit. Make sure to
+label each coordinate with the correct quadrat number.</li>
+<li>Note: For longitude coordinates, -76 is the same thing as W76</li>
+</ul>
+<p><strong>Pre-label three biomass bags and three sediment sample
+containers</strong></p>
+<ul>
+<li>Use a sharpie to put the date, “Point Lookout,” your group letter,
+and quadrat number on each of your three biomass bags</li>
+<li>Use a sharpie to write directly on the sediment sample containers
+your group letter and quadrat number</li>
+</ul>
 </div>
 
 
