--- a/04-marsh-field-methods.html
+++ b/04-marsh-field-methods.html
@@ -485,8 +485,9 @@ to help everyone at the same time.</li>
 <li>Put a piece of labeling tape on your group’s GPS unit and label it
 with your group letter.<br />
 </li>
-<li>Enter your group’s GPS coordinates into your GPS unit. Make sure to
-label each coordinate with the correct quadrat number.</li>
+<li>Enter your group’s <a href="https://docs.google.com/spreadsheets/d/1mYoGyq-8Y2-RpsXb-zOX1jk5tfSAcb7muXgy5Yux3so/edit?gid=0#gid=0">GPS
+coordinates</a> into your GPS unit. Make sure to label each coordinate
+with the correct quadrat number.</li>
 <li>Note: For longitude coordinates, -76 is the same thing as W76</li>
 </ul>
 <p><strong>Pre-label three biomass bags and three sediment sample
