--- a/04-marsh-field-methods.html
+++ b/04-marsh-field-methods.html
@@ -469,17 +469,17 @@ Ch 3: Experimental design</a></li>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
-<ol style="list-style-type: decimal">
-<li>We’ll first go over the details of our marsh sampling methods, as
+<div id="marsh-sampling-methods" class="section level3">
+<h3>Marsh sampling methods</h3>
+<p>We’ll first go over the details of our marsh sampling methods, as
 outlined in the slides, so that you’re ready to make the measurements in
 the field today. Pay close attention because Kylie and I won’t be able
-to help everyone at the same time.</li>
-</ol>
+to help everyone at the same time.</p>
 <iframe src="https://docs.google.com/presentation/d/1V8VrXDSoeyJIivLSKPxECJzmMrDmmyq-bhgUY9I1600/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
 </iframe>
-<ol start="2" style="list-style-type: decimal">
-<li>Pre-lab prep:</li>
-</ol>
+</div>
+<div id="pre-lab-prep" class="section level3">
+<h3>2. Pre-lab prep</h3>
 <p><strong>Enter quadrat coordinates into GPS unit</strong></p>
 <ul>
 <li>Put a piece of labeling tape on your group’s GPS unit and label it
@@ -498,6 +498,12 @@ and quadrat number on each of your three biomass bags</li>
 <li>Use a sharpie to write directly on the sediment sample containers
 your group letter and quadrat number</li>
 </ul>
+<div id="site-map" class="section level4">
+<h4>Site map</h4>
+<iframe src="https://www.google.com/maps/d/u/0/embed?mid=1QLcQVzjpS5U_SPJj7oAzR-V0HePlK8U&amp;ehbc=2E312F&amp;noprof=1" width="640" height="480" data-external="1">
+</iframe>
+</div>
+</div>
 </div>
 
 
