update lesson plan

--- a/08-marsh-sample-processing.html
+++ b/08-marsh-sample-processing.html
@@ -443,6 +443,19 @@ sample processing procedures</a></li>
 data folder</a></li>
 </ul>
 </div>
+<div id="the-plan" class="section level2">
+<h2>The plan</h2>
+<ol style="list-style-type: decimal">
+<li>Descriptive statistics worksheet</li>
+<li>Upload photo of your datasheet to the <a href="https://drive.google.com/drive/folders/1D7S0GCKyukQIRwPGNQ1NnPuDJp0fUduo?usp=sharing">Scanned
+datasheets folder</a> (or email the image file to me and I’ll upload
+it)</li>
+<li>Enter data from last week into spreadsheets in the <a href="https://drive.google.com/drive/u/0/folders/1V54Fckddxa9uEvRUFYMo4Ux1ReRa8och">Marsh
+data folder</a></li>
+<li>Start processing biomass and soil samples following <a href="https://docs.google.com/document/d/1M4OE7BUvFNgn0N8We2H8loJPctRDLbZeynfFM61EwkY/edit?usp=sharing">Marsh
+sample processing procedures</a></li>
+</ol>
+</div>
 
 
 
