--- a/09-statistical-inference.html
+++ b/09-statistical-inference.html
@@ -436,9 +436,23 @@ display: none;
 
 <div id="housekeeping" class="section level2">
 <h2>Housekeeping</h2>
+<ul>
+<li>Lab this week is indoors. We’ll meet in SH 112.</li>
+<li>The report for the marsh vegetation survey is due in class on Th
+10/10 (moved from F 10/4)</li>
+<li>Here are the <a href="https://docs.google.com/document/d/1F6b2qSFbESrm1Hhu7xn3AIkZWvM4GQecbj_fWf65vFY/edit?usp=sharing">lab
+report guidelins</a>. The doc is also linked on the class schedule</li>
+</ul>
 </div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning objectives</h2>
+<ul>
+<li>Define null hypothesis (H<sub>0</sub>) and alternative hypothesis
+(H<sub>a</sub>)</li>
+<li>Formulate null and alternative hypotheses</li>
+<li>Determine appropriate data graphics for making inferences about
+observed trends, patterns, and relationships</li>
+</ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
@@ -451,8 +465,10 @@ Ch 2: Introduction to statistical inference</a></li>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
 <ol style="list-style-type: decimal">
+<li>Quiz 4</li>
 <li>Slides on statistical inference
 <iframe src="https://docs.google.com/presentation/d/18XPK329SL4EcbvN1hFl57cAvKtRM1QyzDkTqTKxEVLk/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></li>
+<li>Data graphics worksheet</li>
 </ol>
 </div>
 
