--- a/10-marsh-data-analysis.html
+++ b/10-marsh-data-analysis.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Statistical inference</title>
+<title>Marsh sample processing and data analysis</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,48 +429,29 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Statistical inference</h1>
+<h1 class="title toc-ignore">Marsh sample processing and data
+analysis</h1>
 
 </div>
 
 
-<div id="housekeeping" class="section level2">
-<h2>Housekeeping</h2>
-<ul>
-<li>Lab this week is indoors. We’ll meet in SH 112.</li>
-<li>The report for the marsh vegetation survey is due in class on Th
-10/10 (moved from F 10/4)</li>
-<li>Here are the <a href="https://docs.google.com/document/d/1F6b2qSFbESrm1Hhu7xn3AIkZWvM4GQecbj_fWf65vFY/edit?usp=sharing">lab
-report guidelins</a>. The doc is also linked on the class schedule.
-We’ll go over it in lab.</li>
-</ul>
-</div>
-<div id="learning-objectives" class="section level2">
-<h2>Learning objectives</h2>
-<ul>
-<li>Define null hypothesis (H<sub>0</sub>) and alternative hypothesis
-(H<sub>a</sub>)</li>
-<li>Formulate null and alternative hypotheses</li>
-<li>Determine appropriate data graphics for making inferences about
-observed trends, patterns, and relationships</li>
-</ul>
-</div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="https://docs.google.com/presentation/d/18XPK329SL4EcbvN1hFl57cAvKtRM1QyzDkTqTKxEVLk/">Slides</a></li>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch2.pdf">Milroy
-Ch 2: Introduction to statistical inference</a></li>
+<li><a href="https://docs.google.com/document/d/1M4OE7BUvFNgn0N8We2H8loJPctRDLbZeynfFM61EwkY/edit">Sample
+processing SOPs</a></li>
+<li><a href="https://docs.google.com/document/d/1luYoEiBnboI7aX82ujeBvYRhvYvfmb4EKP9LFWJQ7Hk/edit#heading=h.rv1jr91net8v">Data
+analysis plan</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
 <ol style="list-style-type: decimal">
-<li>Quiz 4</li>
-<li>Slides on statistical inference
-<iframe src="https://docs.google.com/presentation/d/18XPK329SL4EcbvN1hFl57cAvKtRM1QyzDkTqTKxEVLk/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></li>
-<li><a href="https://docs.google.com/document/d/1Ncu1aEaEgyRHrj0giJLRq62jcNz8KL5pfugoETFdPzQ/edit?usp=sharing">Data
-graphics worksheet</a></li>
+<li>Prep soil samples for conductivity measurement and muffling</li>
+<li>Weigh biomass samples</li>
+<li>Start analyzing data</li>
+<li>At the very end of lab before leaving, make sure to measure soil
+conductivity.</li>
 </ol>
 </div>
 
