--- a/12-benthic-sampling.html
+++ b/12-benthic-sampling.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Marsh sample processing and data analysis</title>
+<title>Benthic sampling</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,32 +429,34 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Marsh sample processing and data
-analysis</h1>
+<h1 class="title toc-ignore">Benthic sampling</h1>
 
 </div>
 
 
+<div id="housekeeping" class="section level2">
+<h2>Housekeeping</h2>
+<ul>
+<li>Lab this week is at CBL. We will be outside on the dock the whole
+time. Dress for the weather. Wear closed-toe shoes that are comfortable
+(sneakers, crocs, etc.).</li>
+</ul>
+</div>
+<div id="learning-objectives" class="section level2">
+<h2>Learning objectives</h2>
+</div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="https://drive.google.com/drive/folders/1V54Fckddxa9uEvRUFYMo4Ux1ReRa8och?usp=drive_link">Data
-folder</a></li>
-<li><a href="https://docs.google.com/document/d/1M4OE7BUvFNgn0N8We2H8loJPctRDLbZeynfFM61EwkY/edit">Sample
-processing SOPs</a></li>
-<li><a href="https://docs.google.com/document/d/1luYoEiBnboI7aX82ujeBvYRhvYvfmb4EKP9LFWJQ7Hk/edit#heading=h.rv1jr91net8v">Data
-analysis plan</a></li>
+<li>Slides</li>
+<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch6.pdf">Milroy
+Ch. 6: Census methods for benthic organisms</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
-<ol style="list-style-type: decimal">
-<li>Prep soil samples for conductivity measurement and muffling</li>
-<li>Weigh biomass samples</li>
-<li>Start analyzing data</li>
-<li>At the very end of lab before leaving, make sure to measure soil
-conductivity.</li>
-</ol>
+<p>Benthic sampling slides by Nina Santos
+<iframe src="https://docs.google.com/presentation/d/1-66PU_6xA5f48n7NeXjfNWnSHQO8jxzhC5RiHjvvSEg/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></p>
 </div>
 
 
