--- a/11-scientific-writing.html
+++ b/11-scientific-writing.html
@@ -11,7 +11,7 @@
 
 
 
-<title>The benthic environment</title>
+<title>Scientific writing</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,7 +429,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">The benthic environment</h1>
+<h1 class="title toc-ignore">Scientific writing</h1>
 
 </div>
 
@@ -439,27 +439,55 @@ display: none;
 <ul>
 <li>Lab this week is at CBL. We will be outside on the dock the whole
 time. Dress for the weather. Wear closed-toe shoes that are comfortable
-(sneakers, crocs, etc.).</li>
+and you don’t mind potentially getting a little wet/dirty (sneakers,
+crocs, etc.).</li>
+<li>Quiz 5 will be on Thursday instead of today! It will cover the
+statistical inference/data graphics learning objectives</li>
 </ul>
 </div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning objectives</h2>
+<ul>
+<li>Determine appropriate data graphics for making inferences about
+observed trends, patterns, and relationships</li>
+<li>Report and discuss research methods and results</li>
+</ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li>Slides</li>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch6.pdf">Milroy
-Ch. 6: Census methods for benthic organisms</a></li>
+<li><a href="https://docs.google.com/presentation/d/18XPK329SL4EcbvN1hFl57cAvKtRM1QyzDkTqTKxEVLk/edit?usp=drive_link">Statistical
+inference slides</a> (includes overview of data graphics for scientific
+inference)</li>
+<li><a href="https://www.data-to-viz.com/">From Data to Viz: Data
+visualization decision tree</a></li>
+<li><a href="https://docs.google.com/document/d/1F6b2qSFbESrm1Hhu7xn3AIkZWvM4GQecbj_fWf65vFY/edit">Field
+study report guidelines</a></li>
+<li><a href="https://docs.google.com/spreadsheets/d/1bEn5rm4jVT0NfSCncYZ8jzgBva9Mi-LlVnbdKcKl_jQ/edit?gid=0#gid=0">Field
+study report specifications</a></li>
+<li><a href="https://drive.google.com/drive/folders/1V54Fckddxa9uEvRUFYMo4Ux1ReRa8och?usp=drive_link">Marsh
+lab data</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
 <ol style="list-style-type: decimal">
-<li>Quiz 5</li>
-<li>Slides - the benthic environment
-<iframe src="https://docs.google.com/presentation/d/1iBc16csODl5D0ObxhkK3fUlfj-XSvUw65sLQIoXMKlk/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></li>
-<li>Worksheet - lab report brainstorming</li>
+<li><a href="https://docs.google.com/document/d/1Ncu1aEaEgyRHrj0giJLRq62jcNz8KL5pfugoETFdPzQ/edit">Data
+graphics worksheet</a> (paper copies will be distributed in class)</li>
+<li>Recap datasets
+<ul>
+<li>Were there any errors/mispellings/blank entries etc. that need to be
+fixed? This is your last chance. Do it now.</li>
+<li>Think about how you might combine datasets for comparisons. Some
+have the same number of observations; these are easy to combine: just
+create a new “combined” spreadsheet and copy and paste the columns you
+want to into that new combined spreadsheet.</li>
+<li>Some spreadsheets have a different number of observations. You might
+have to calculate some summary statistics (like use a pivot table to sum
+all of the stem counts or biomass values for each quadrat)</li>
+</ul></li>
+<li><a href="https://docs.google.com/document/d/1zVFvk6CJLWHMBcWu_2dN7tJ8Q6EyS8s2i-t9JYNqw1g/edit">Scientific
+writing worksheet</a> (paper copies will be distributed in class)</li>
 </ol>
 </div>
 
