--- a/12-benthic-sampling.html
+++ b/12-benthic-sampling.html
@@ -448,7 +448,7 @@ time. Dress for the weather. Wear closed-toe shoes that are comfortable
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li>Slides</li>
+<li><a href="https://docs.google.com/presentation/d/1-66PU_6xA5f48n7NeXjfNWnSHQO8jxzhC5RiHjvvSEg">Slides</a></li>
 <li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch6.pdf">Milroy
 Ch. 6: Census methods for benthic organisms</a></li>
 </ul>
