--- a/12-benthic-sampling.html
+++ b/12-benthic-sampling.html
@@ -444,19 +444,32 @@ time. Dress for the weather. Wear closed-toe shoes that are comfortable
 </div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning objectives</h2>
+<ul>
+<li>Define <em>benthic</em>, <em>benthos</em>, <em>plankton</em>,
+<em>nekton</em>, <em>epifauna</em>, and <em>infauna</em></li>
+<li>Describe the ecological importance of benthic organisms</li>
+<li>Describe common environmental variables that can affect the health
+and distribution of benthic organisms</li>
+<li>Describe common methods for sampling benthic organisms</li>
+</ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="https://docs.google.com/presentation/d/1-66PU_6xA5f48n7NeXjfNWnSHQO8jxzhC5RiHjvvSEg">Slides</a></li>
+<li><a href="https://docs.google.com/presentation/d/1je1-ylZv_F06-S2x1WAiRcdZ4ZZDtlzO/">Slides</a></li>
 <li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch6.pdf">Milroy
 Ch. 6: Census methods for benthic organisms</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
-<p>Benthic sampling slides by Nina Santos
-<iframe src="https://docs.google.com/presentation/d/1-66PU_6xA5f48n7NeXjfNWnSHQO8jxzhC5RiHjvvSEg/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></p>
+<ol style="list-style-type: decimal">
+<li>Quiz 5</li>
+<li>Benthic sampling slides (guest lecturer: Nina Santos, PhD student at
+CBL)</li>
+<li>Overview of CBL benthic sampling lab
+<iframe src="https://docs.google.com/presentation/d/1je1-ylZv_F06-S2x1WAiRcdZ4ZZDtlzO/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></li>
+</ol>
 </div>
 
 
