--- a/14-benthic-sampling.html
+++ b/14-benthic-sampling.html
@@ -445,6 +445,12 @@ display: none;
 </div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning objectives</h2>
+<ul>
+<li>Define <em>mobile</em>, <em>sessile</em>, <em>infauna</em>, and
+<em>epifauna</em></li>
+<li>Identify appropriate benthic sampling methods for mobile and sessile
+infauna and epifauna</li>
+</ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
