--- a/16-sav-sample-processing.html
+++ b/16-sav-sample-processing.html
@@ -434,6 +434,17 @@ display: none;
 </div>
 
 
+<div id="resources" class="section level2">
+<h2>Resources</h2>
+<ul>
+<li><a href="https://docs.google.com/spreadsheets/d/1v5taHFVVZiA8XPXAbQ4n5857FToXCtW9mN1hfKhdsSI/edit?usp=sharing">animal
+datasheet</a></li>
+<li><a href="https://dnr.maryland.gov/waters/bay/Documents/SAV/complete_sav_key.pdf">SAV
+species ID guide</a></li>
+</ul>
+<iframe src="https://docs.google.com/presentation/d/1po_bQO2yl5RPzcE5ENP_fQrvJvtGat8XWUu893FIpd4/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
+</iframe>
+</div>
 <div id="i.-knot-tying-objectives" class="section level2">
 <h2>I. Knot-tying objectives</h2>
 <ul>
@@ -442,22 +453,22 @@ display: none;
 </div>
 <div id="ii.-sav-sample-processing-instructions" class="section level2">
 <h2>II. SAV sample processing instructions</h2>
-<div id="resources" class="section level3">
-<h3>Resources</h3>
+<div id="a-few-notes-about-this-lab" class="section level3">
+<h3>A few notes about this lab</h3>
 <ul>
-<li><a href="https://dnr.maryland.gov/waters/bay/Documents/SAV/complete_sav_key.pdf">SAV
-species ID guide</a></li>
+<li><strong>Nobody is done until everyone is done.</strong> If you
+finish your sample, help someone else finish theirs.</li>
+<li><strong>Keep track of your sample bag!</strong> It contains your
+sample ID information. It is very important that you don’t misplace your
+sample bag or get it mixed up with someone else’s bag. We need to be
+able to identify the site and chamber letter for each sample.</li>
+<li>I need to finish these today. If we’re not done by the end of lab
+and you have time to stay to help me finish, I would much appreciate it.
+If not no worries.</li>
 </ul>
 </div>
 <div id="instructions" class="section level3">
 <h3>Instructions</h3>
-<ul>
-<li><strong>Nobody is done until everyone is done - if you finish your
-sample, help someone else finish theirs.</strong></li>
-<li><strong>I need to finish these today. If we’re not done by the end
-of lab and you have time to stay to help me finish, I would much
-appreciate it. If not no worries.</strong></li>
-</ul>
 <ol style="list-style-type: decimal">
 <li>Grab a sample bag, dump it into a sieve, and rinse the sample. Fill
 a plastic container with water and place your sample in the water. Bring
@@ -480,6 +491,17 @@ where they meet the roots/rhizomes.</li>
 above/below ground material. Label foil packets with the site name,
 sample date, species abbreviation (see below), chamber letter, and AG
 (for above ground) or BG (for belowground).</li>
+<li>If there are any clams or worms in your sample, place them on a
+numbered weigh boat. Find your boat number in the <a href="https://docs.google.com/spreadsheets/d/1v5taHFVVZiA8XPXAbQ4n5857FToXCtW9mN1hfKhdsSI/edit?usp=sharing">animal
+datasheet</a> and record the river (POT), site (FW or BR), chamber_id
+(A-L), and species_id (either “clam” or “worm”). You can place more than
+one clam or worm on a weigh boat if they’re small enough to fit but
+don’t put both clams and worms in the same weigh boat. Double check that
+you recorded your sample ID information in the animsl datasheet, then
+place the weigh boat on a cookie sheet in the drying oven.</li>
+<li>If you notice that there are a lot (like more than 10) of another
+type of animal in your sample, let me know. We may want to dry and weigh
+them as well.</li>
 </ol>
 </div>
 <div id="species-abbreviations" class="section level3">
