--- a/16-sav-sample-processing.html
+++ b/16-sav-sample-processing.html
@@ -437,7 +437,7 @@ display: none;
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="https://docs.google.com/spreadsheets/d/1v5taHFVVZiA8XPXAbQ4n5857FToXCtW9mN1hfKhdsSI/edit?usp=sharing">animal
+<li><a href="https://docs.google.com/spreadsheets/d/1v5taHFVVZiA8XPXAbQ4n5857FToXCtW9mN1hfKhdsSI/edit?usp=sharing">Animal
 datasheet</a></li>
 <li><a href="https://dnr.maryland.gov/waters/bay/Documents/SAV/complete_sav_key.pdf">SAV
 species ID guide</a></li>
@@ -445,10 +445,11 @@ species ID guide</a></li>
 <iframe src="https://docs.google.com/presentation/d/1po_bQO2yl5RPzcE5ENP_fQrvJvtGat8XWUu893FIpd4/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1">
 </iframe>
 </div>
-<div id="i.-knot-tying-objectives" class="section level2">
-<h2>I. Knot-tying objectives</h2>
+<div id="i.-knot-tying" class="section level2">
+<h2>I. Knot-tying</h2>
 <ul>
-<li>Tie a bowline, lobster buoy hitch, and half hitch</li>
+<li>Tie a bowline, lobster buoy hitch, and half hitch (instructional
+videos <a href="https://mrne392.github.io/assessment/knot-tying.html">here</a>)</li>
 </ul>
 </div>
 <div id="ii.-sav-sample-processing-instructions" class="section level2">
