--- a/17-ocean-variables.html
+++ b/17-ocean-variables.html
@@ -446,6 +446,18 @@ Make sure to bring your rope to class!</li>
 </div>
 <div id="learning-objectives" class="section level2">
 <h2>Learning objectives</h2>
+<ul>
+<li>Define <em>Lagrangian</em> and <em>Eulerian</em> and explain how
+these approaches to measuring oceanographic variables differ from each
+other</li>
+<li>Determine appropriate spatial and temporal boundaries for an
+oceanographic field study</li>
+<li>Define UTC and be able to convert UTC time to local time</li>
+<li>Define <em>density</em> and <em>hydrostatic pressure</em></li>
+<li>Explain how temperature, salinity, and pressure affect density</li>
+<li>Select appropriate physical, chemical, and/or geologic variables to
+test a given hypothesis</li>
+</ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
