--- a/17-ocean-variables.html
+++ b/17-ocean-variables.html
@@ -437,10 +437,10 @@ display: none;
 <div id="housekeeping" class="section level2">
 <h2>Housekeeping</h2>
 <ul>
-<li>The next quiz (10/24) will be on knot-tying! You’ll be quizzed on
-the knots you’ll need to be able to do for our last field study. The
-knots and instructional videos are listed <a href="https://mrne392.github.io/assessment/knot-tying.html">here</a>.
-Make sure to bring your rope to class!</li>
+<li>The next quiz (in lab on 10/24) will be on knot-tying! You’ll be
+quizzed on the knots you’ll need to be able to do for our last field
+study. The knots and instructional videos are listed <a href="https://mrne392.github.io/assessment/knot-tying.html">here</a>.
+Make sure to bring your rope to lab!</li>
 <li>Lab will be inside and outside this week. We’ll meet in SH 112.</li>
 </ul>
 </div>
