--- a/19-hydrologic-field-study-plan.html
+++ b/19-hydrologic-field-study-plan.html
@@ -457,6 +457,8 @@ display: none;
 <ul>
 <li><a href="https://smr-monitoring.github.io/MRNE395-2024FA/sops.html">Standard
 operating procedures</a></li>
+<li><a href="https://drive.google.com/drive/folders/1lAaWzYoXvyzf02Omr3Z3Fm1-GAfI7BnQ?usp=drive_link">Planning
+worksheets</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
