--- a/21-field-study-planning.html
+++ b/21-field-study-planning.html
@@ -206,15 +206,16 @@ g/m2.</li>
 <li>Species names are italicized. Genus is capitalized: <em>Spartina
 alterniflora</em></li>
 </ol></li>
-<li>Write an “and but therefore” statement and summary of methods for
-your group’s hydrologic study at the end of your planning doc (available
-in <a
-href="https://drive.google.com/drive/u/0/folders/1lAaWzYoXvyzf02Omr3Z3Fm1-GAfI7BnQ">this
-folder</a>)</li>
+<li>Finalize your deployment plan. Modify your plan worksheet, available
+in the <a
+href="https://drive.google.com/drive/u/0/folders/1lAaWzYoXvyzf02Omr3Z3Fm1-GAfI7BnQ">Hydrologic
+field study folder</a>, if necessary. Discuss your study site
+reconnaissance observations: 1) make sure it is an appropriate site for
+testing your hypothesis, 2) evaluate the site for potential hazards to
+your own safety and the safety of the loggers, and 3) note the water
+depth to ensure that your buoy line is long enough.</li>
 <li>Run your deployment plan by Cassie.</li>
 </ol>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ERB7ITvabA4?si=A9N4HO_-SXSYPKhC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-</iframe>
 </div>
 
 
