--- a/22-retrieval-planning.html
+++ b/22-retrieval-planning.html
@@ -469,7 +469,7 @@ activity in which you’ll develop a field research “toolkit” for your
 future selves and/or other early career field researchers. The purpose
 of this discussion today is to start thinking about your experiences in
 this class and reflect on their applicability to your future work in
-ecological field research.</li>
+ecological field research. I’ll record your discussion contributions <a href="https://docs.google.com/document/d/17Of3Poz3KC2kGXkY-ZT7zfEt8nkyi66-T3QGRkYNzKo/edit?tab=t.0">here</a>.</li>
 </ol>
 <ul>
 <li>What went well in lab last week?</li>
