--- a/23-univariate-analysis.html
+++ b/23-univariate-analysis.html
@@ -441,6 +441,10 @@ display: none;
 Tuesday</li>
 <li>Lab today: meet in SH 112, then retrieve loggers. Be prepared to go
 outside in whatever conditions your loggers are deployed in.</li>
+<li>Another EC opportunity: Saturday, November 9 from 1 pm to 4 pm spat
+counting with SMRWA. Please let Emma Green know if you can make it via
+email (<a href="mailto:emmasmrwa@gmail.com" class="email">emmasmrwa@gmail.com</a>) or signing up via the <a href="https://www.signupgenius.com/go/10C0944A5AC2FA5F9C16-52918137-counting">sign-up
+genius</a></li>
 </ul>
 </div>
 <div id="learning-objectives" class="section level2">
