--- a/23-univariate-analysis.html
+++ b/23-univariate-analysis.html
@@ -437,30 +437,15 @@ display: none;
 <div id="housekeeping" class="section level2">
 <h2>Housekeeping</h2>
 <ul>
-<li>Quiz next Thursday on learning objectives from today and next
-Tuesday</li>
+<li>Quiz next Thursday: Be able to articulate your hydrologic field
+study data analysis methods and how they will enable you to test your
+hypotheses</li>
 <li>Lab today: meet in SH 112, then retrieve loggers. Be prepared to go
 outside in whatever conditions your loggers are deployed in.</li>
 <li>Another EC opportunity: Saturday, November 9 from 1 pm to 4 pm spat
 counting with SMRWA. Please let Emma Green know if you can make it via
 email (<a href="mailto:emmasmrwa@gmail.com" class="email">emmasmrwa@gmail.com</a>) or signing up via the <a href="https://www.signupgenius.com/go/10C0944A5AC2FA5F9C16-52918137-counting">sign-up
 genius</a></li>
-</ul>
-</div>
-<div id="learning-objectives" class="section level2">
-<h2>Learning objectives</h2>
-<ul>
-<li>Define <em>t-test</em> and <em>ANOVA</em></li>
-<li>For a given dataset, determine an appropriate statistical test for
-comparing population means (t-test or ANOVA)</li>
-<li>Formulate a null and alternative hypothesis for a t-test and/or
-ANOVA</li>
-<li>Define and calculate species richness, Shannon’s H, and Simpson’s D
-metrics of biodiversity</li>
-<li>Explain the role of before/after and control/impact treatments in a
-BACI experiment</li>
-<li>Design a BACI experiment for a given research question</li>
-<li>Interpret the results of a BACI experiment</li>
 </ul>
 </div>
 <div id="resources" class="section level2">
@@ -480,8 +465,10 @@ project spreadsheet</a></li>
 <li>Sign up for poster groups in <a href="https://docs.google.com/spreadsheets/d/1BgDhoONcbGGGXkjJAlRhcocOCIhK9FUYvEODWMZDmXY/edit?usp=sharing">this
 spreadsheet</a>. You don’t need to have a title yet but it would be good
 to start thinking about which project you want to use.</li>
-<li>Slides:
-<iframe src="https://docs.google.com/presentation/d/1jiKVCHhvZRjtESpoUCwc7PMipsYj-G5Nrq1BG2p6GUg/embed?start=false&amp;loop=false&amp;delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" data-external="1"></iframe></li>
+<li><em>Chasing Coral</em>: I was going to cover some other ancillary
+data stuff, but today feels like a good time to instead take a step back
+and think about why studying marine science is important and why we need
+people who can do robust field-based marine science research.</li>
 </ol>
 </div>
 
