--- a/24-hydro-data-analysis.html
+++ b/24-hydro-data-analysis.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Univariate data analysis</title>
+<title>Hydrologic data analysis: tidying and wrangling</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,21 +429,28 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Univariate data analysis</h1>
+<h1 class="title toc-ignore">Hydrologic data analysis: tidying and
+wrangling</h1>
 
 </div>
 
 
 <div id="housekeeping" class="section level2">
 <h2>Housekeeping</h2>
-</div>
-<div id="learning-objectives" class="section level2">
-<h2>Learning objectives</h2>
 <ul>
 <li>Quiz Thursday: Be able to articulate your hydrologic field study
 data analysis methods and how they will enable you to test your
 hypotheses</li>
 <li>Lab Thursday is indoors: data analysis and poster workshop</li>
+</ul>
+</div>
+<div id="learning-objectives" class="section level2">
+<h2>Learning objectives</h2>
+<ul>
+<li>Tidy, wrangle, and analyze hydrologic data for hypothesis
+testing.</li>
+<li>Articulate how you will analyze your data to address your
+hypotheses.</li>
 </ul>
 </div>
 <div id="resources" class="section level2">
@@ -474,6 +481,15 @@ groups spreadsheet</a></p>
 <h4>Review data organization in spreadsheets</h4>
 <p>In your groups please review the <a href="https://docs.google.com/presentation/d/1ZN_ijD-HA0sWme2a1BvdeH27_FyqzHToK-fItbCxli8/edit?usp=drive_link">Data
 organization in spreadsheets slides</a> or <a href="https://www.tandfonline.com/doi/full/10.1080/00031305.2017.1375989">paper</a>.</p>
+</div>
+<div id="data-analysis-planning" class="section level4">
+<h4>Data analysis planning</h4>
+<p>In your groups, grab a blank piece of paper. At the top, list all of
+your field study sites and which variables you measured at each site.
+Below that, write out your hypotheses. Leave some room in between
+hypotheses. Below each hypothesis, describe how you will analyze your
+data to test the hypothesis. Draw a few sketches of graphs you might
+create.</p>
 </div>
 <div id="data-cleaning-and-wrangling" class="section level4">
 <h4>Data cleaning and wrangling</h4>
