--- a/27-group-work-session.html
+++ b/27-group-work-session.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Hydrologic data analysis - data cleaning</title>
+<title>Group work session</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,55 +429,36 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Hydrologic data analysis - data
-cleaning</h1>
+<h1 class="title toc-ignore">Group work session</h1>
 
 </div>
 
 
 <div id="housekeeping" class="section level2">
 <h2>Housekeeping</h2>
-<ol style="list-style-type: decimal">
-<li>Lab is inside today. We’ll analyze our data and start thinking about
-the poster project.</li>
-</ol>
-</div>
-<div id="learning-objectives" class="section level2">
-<h2>Learning objectives</h2>
 <ul>
-<li>Tidy, wrangle, and analyze hydrologic data for hypothesis
-testing.</li>
-<li>Articulate how you will analyze your data to address your
-hypotheses.</li>
+<li>Hydrologic study report due in class next Tuesday 11/26</li>
+<li>We will peer review the posters in lab Thursday</li>
+<li>Poster final drafts due at 5:00 the Monday after we return from
+Thanksgiving break 12/2. If you don’t submit it by 5 pm your poster will
+not be printed!</li>
+<li>Poster symposium is Friday 12/6 at 11:30</li>
 </ul>
 </div>
 <div id="resources" class="section level2">
 <h2>Resources</h2>
 <ul>
-<li><a href="https://docs.google.com/presentation/d/1ZN_ijD-HA0sWme2a1BvdeH27_FyqzHToK-fItbCxli8/edit?usp=drive_link">Data
-organization in spreadsheets slides</a></li>
-<li><a href="https://www.tandfonline.com/doi/full/10.1080/00031305.2017.1375989">Data
-organization in spreadsheets paper</a></li>
 <li><a href="https://drive.google.com/drive/u/0/folders/1wtrXccYT4a-26WlzA1wwQgkIST36K7t7">Lab
 3 group folders</a></li>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch8.pdf">Milroy
-Ch. 8: Introduction to univariate analysis</a></li>
-<li><a href="https://mrne392.github.io/lesson-plans/readings/Milroy_Ch9.pdf">Milroy
-Ch. 9: Introduction to multivariate analysis</a></li>
-<li><a href="https://mrne392.github.io/lesson-plans/24-hydro-data-analysis.html">Data
-tidying instructions</a></li>
+<li><a href="https://drive.google.com/drive/u/0/folders/1863RanHSeoydJAx8f_UEz_1qiIuW3zyb">Poster
+group folders</a></li>
+<li><a href="https://docs.google.com/presentation/d/1V1wmwCNhazFZqrEC-DNapyhbKBnCFK-v0bHhTuFZGt8">Poster-making
+slides</a></li>
 </ul>
 </div>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
-<ol style="list-style-type: decimal">
-<li><p>Take quiz 10</p></li>
-<li><p>How to use <a href="https://www.google.com/maps/d/u/0/">Google My
-Maps</a> to make a study site map</p></li>
-<li><p>Work with your groups to tidy and wrangle your data. Use the
-methods I went over last time as a guide (see <a href="https://mrne392.github.io/lesson-plans/24-hydro-data-analysis.html">data
-tidying instructions</a>).</p></li>
-</ol>
+<p>Work on posters!</p>
 </div>
 
 
