--- a/27-group-work-session.html
+++ b/27-group-work-session.html
@@ -459,6 +459,19 @@ slides</a></li>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
 <p>Work on posters!</p>
+<p>##Note about superscripts##</p>
+<p>In your plot axis labels, it’s important that you format superscripts
+correctly. For example, “mysids/m2” looks sloppy, lazy, or like you
+don’t know what you’re doing. The correct format is mysids m⁻². Excel
+and Google Sheets don’t make it easy to create properly formatted labels
+with superscripts. Here is a workaround for adding superscripts:</p>
+<ul>
+<li>Go to this <a href="https://lingojam.com/SuperscriptGenerator">superscript
+generator</a> website</li>
+<li>Type in the superscript you want to generate (e.g., -2)</li>
+<li>Copy the superscript generated (e.g., ⁻²)</li>
+<li>Paste it into your chart axis label (e.g., mysids m⁻²)</li>
+</ul>
 </div>
 
 
