--- a/27-group-work-session.html
+++ b/27-group-work-session.html
@@ -459,7 +459,7 @@ slides</a></li>
 <div id="lesson-plan" class="section level2">
 <h2>Lesson plan</h2>
 <p>Work on posters!</p>
-<p>##Note about superscripts##</p>
+<p><strong>Note about superscripts</strong></p>
 <p>In your plot axis labels, it’s important that you format superscripts
 correctly. For example, “mysids/m2” looks sloppy, lazy, or like you
 don’t know what you’re doing. The correct format is mysids m⁻². Excel
