--- a/29-poster-practice.html
+++ b/29-poster-practice.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Template</title>
+<title>Poster practice</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,7 +429,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Template</h1>
+<h1 class="title toc-ignore">Poster practice</h1>
 
 </div>
 
