--- a/30-wrap-up.html
+++ b/30-wrap-up.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Poster practice</title>
+<title>Skills and knowledge inventory</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -429,7 +429,7 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Poster practice</h1>
+<h1 class="title toc-ignore">Skills and knowledge inventory</h1>
 
 </div>
 
